# solana-stablecoin-standard

./: .gitignore  .sss-token.json  API.md  ARCHITECTURE.md  Anchor.toml  COMPLIANCE.md  OPERATIONS.md  README.md  SDK.md  SSS-1.md  SSS-2.md  SSS-3.md  package.json
backend/: .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json
backend/idl/: sss_core.json
backend/src/: config.ts  index.ts
backend/src/middleware/: error-handler.ts  request-id.ts
backend/src/routes/: compliance.ts  oracle.ts  (+2 more)
cli/: package.json  tsconfig.json
cli/src/: index.ts
frontend/: next.config.ts  package-lock.json  package.json
modules/confidential/: package-lock.json  package.json  tsconfig.json
modules/oracle/: package-lock.json  package.json  tsconfig.json
programs/sss-core/: Cargo.toml
programs/sss-oracle/: Cargo.toml
programs/sss-oracle/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/sss-oracle/src/instructions/: initialize_oracle.rs  mint_with_oracle.rs  mod.rs  redeem_with_oracle.rs  update_oracle_feed.rs  update_oracle_params.rs  withdraw_fees.rs
programs/sss-oracle/src/utils/: price.rs
programs/sss-transfer-hook/: Cargo.toml
scripts/: deploy-devnet.sh  devnet-deployment.json  devnet-example-ops.ts
sdk/core/: package-lock.json  package.json  tsconfig.json
sdk/oracle/: package-lock.json  package.json
tests/: sss-core.ts  sss-oracle.ts
trident-tests/: Trident.toml
trident-tests/fuzz_0/: fuzz_accounts.rs  test_fuzz.rs  types.rs
tui/: package-lock.json  package.json  tsconfig.json
tui/src/: app.tsx  index.tsx
(+124 files in other folders)
